feat: Get All Category
