# public/swagger.json
@@ -21,12 +21,16 @@
         {
             "name": "User",
             "description": "Operation about User"
+        },
+        {
+            "name": "Category",
+            "description": "Operation about Category"
         }
     ],
     "paths": {
         "/register": {
             "post": {
-                "tags": ["user"],
+                "tags": ["User"],
                 "description": "Register new user",
                 "requestBody": {
                     "description": "Created User Object",
@@ -110,7 +114,7 @@
         },
         "/login": {
             "post": {
-                "tags": ["user"],
+                "tags": ["User"],
                 "description": "Login user",
                 "requestBody": {
                     "description": "Login User",
@@ -184,7 +188,7 @@
         },
         "/user": {
             "get": {
-                "tags": ["user"],
+                "tags": ["User"],
                 "description": "Get Current user",
                 "parameters": [
                     {
@@ -242,7 +246,7 @@
                 ]
             },
             "patch": {
-                "tags": ["user"],
+                "tags": ["User"],
                 "description": "Update user",
                 "parameters": [
                     {
@@ -328,7 +332,7 @@
                 ]
             },
             "delete": {
-                "tags": ["user"],
+                "tags": ["User"],
                 "description": "Logout user",
                 "parameters": [
                     {
@@ -362,6 +366,72 @@
                             "apllication/json": {
                                 "examples": {
                                     "validationError": {
+                                        "description": "Unauthorized",
+                                        "value": {
+                                            "errors": {
+                                                "message": ["unauthorized!"]
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
+        "/category": {
+            "get": {
+                "tags": ["Category"],
+                "description": "Get All Category",
+                "parameters": [
+                    {
+                        "name": "api_key",
+                        "in": "header",
+                        "description": "",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Get All Category",
+                        "content": {
+                            "application/json": {
+                                "examples": {
+                                    "success": {
+                                        "value": {
+                                            "data": [
+                                                {
+                                                    "id": 1,
+                                                    "name": "Laravel",
+                                                    "slug": "laravel"
+                                                },
+                                                {
+                                                    "id": 2,
+                                                    "name": "NestJs",
+                                                    "slug": "nestjs"
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "apllication/json": {
+                                "examples": {
+                                    "Unauthorized": {
                                         "description": "Unauthorized",
                                         "value": {
                                             "errors": {
